--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
         <div id="main">
             <h1>TIC TAC TOE</h1>
             <div id="settings">
+                <h2>X</h2> <input type="text" id="playerX">
+                <h2>O</h2> <input type="text" id="playerO">
+                <br><button type="submit" value="Start game">
             </div>
-            <div id="grid">
+            <div id="board">
+                <div class="box" id="1"></div>
+                <div class="box" id="2"></div>
+                <div class="box" id="3"></div>
+                <div class="box" id="4"></div>
+                <div class="box" id="5"></div>
+                <div class="box" id="6"></div>
+                <div class="box" id="7"></div>
+                <div class="box" id="8"></div>
+                <div class="box" id="9"></div>
             </div>
 </body>
 </html>
