--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tic tac toe</title>
         <link rel="stylesheet" type="text/css" href="xmarksthespot.css">
-<!-- FONTAWESOME ICON-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 <body>
 
@@ -31,12 +29,12 @@
     </div>
     <div class="gameplay">
             <header>Tic Tac Toe</header>
-            <div id="players">
+            <div class="players">
                 <span class="playerX">Player (X)</span>
                 <span class="playerO">Player (O)</span>
                 <div class="slider"></div>
             </div>
-            <div id="board">
+            <div class="board">
                 <section>
                     <span class="box1"></span>
                     <span class="box2"></span>
@@ -55,10 +53,10 @@
             </div>
     </div>
     <div class="results">
-            <div class="winner"></div>
+            <div class="winner">ghjghjgh</div>
             <div class="newgamebutton"><button>Play again?</button></div>
     </div>
 
-        <script src="xmarksthespot.js"></script>
+    <script src="xmarksthespot.js"></script>
 </body>
 </html>
