--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
     </div>
     <div class="results">
-            <div class="winner">ghjghjgh</div>
+            <div class="winner"></div>
             <div class="newgamebutton"><button>Play again?</button></div>
     </div>
 
